# ccoifits

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
CMakeModules/: FindCCFITS.cmake  FindCFITSIO.cmake
lib/: .gitignore
src/: CMakeLists.txt  COIArray.cpp  COIArray.h  COICalibrator.cpp  COICalibrator.h  COIDataRow.cpp  COIDataRow.h  COIFile.cpp  COIFile.h  COIStation.cpp  COIStation.h  COIT3Row.cpp  COIT3Row.h  COITarget.cpp  COITarget.h  COIUV.cpp  COIUV.h  COIV2Row.cpp  COIV2Row.h  COIVisRow.cpp  COIVisRow.h  COIWavelength.cpp  COIWavelength.h  COI_ARRAY.cpp  COI_ARRAY.h  COI_DATA_TABLE.cpp  COI_DATA_TABLE.h  COI_T3.cpp  COI_T3.h  COI_TABLE.cpp  COI_TABLE.h  COI_TARGET.cpp  COI_TARGET.h  COI_VIS.cpp  COI_VIS.h  COI_VIS2.cpp  COI_VIS2.h  COI_WAVELENGTH.cpp  COI_WAVELENGTH.h  OIExport.cpp  (+38 more)
src/calibrators/: CUniformDisk.cpp  CUniformDisk.h
